--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
 PROJECT(spr_client)
 set(CMAKE_CXX_STANDARD 14) 
 find_package(PkgConfig REQUIRED)
-find_package(Boost REQUIRED COMPONENTS thread)
+find_package( REQUIRED COMPONENTS thread)#Boost
 set(SRC_LIST
     ${CMAKE_CURRENT_SOURCE_DIR}/spr_client.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/common
@@ -26,23 +26,23 @@ target_link_libraries(
     ${PROJECT_NAME}
     pthread
     dns_sd
-    ${ADK_MESSAGE_SERVICE_LDFLAGS}
     ${PROCESS_CPP_LIBRARIES}
-    ${ADK_IPC_LIBRARIES}
-    ${ADK_CONFIG_LIBRARIES}
-    ${DBUSCPP_LIBRARIES}
-    ${ADK_MESSAGE_SERVICE_LIBRARIES}
-    ${Boost_LIBRARIES}
+    #${ADK_MESSAGE_SERVICE_LDFLAGS}
+    # ${ADK_IPC_LIBRARIES}
+    # ${ADK_CONFIG_LIBRARIES}
+    # ${DBUSCPP_LIBRARIES}
+    # ${ADK_MESSAGE_SERVICE_LIBRARIES}
+    # ${Boost_LIBRARIES}
 )
 
 include_directories(${Boost_INCLUDE_DIRS})
 
 target_include_directories(
   ${PROJECT_NAME} PUBLIC
-  ${ADK_MESSAGE_SERVICE_INCLUDE_DIRS}
-  ${ADK_IPC_INCLUDE_DIRS}
-  ${ADK_CONFIG_INCLUDE_DIRS}
-  ${DBUSCPP_INCLUDE_DIRS}
+#   ${ADK_MESSAGE_SERVICE_INCLUDE_DIRS}
+#   ${ADK_IPC_INCLUDE_DIRS}
+#   ${ADK_CONFIG_INCLUDE_DIRS}
+#   ${DBUSCPP_INCLUDE_DIRS}
 )
 
 install (TARGETS spr_client COMPONENT snap DESTINATION bin)
